--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "spod/module-sync",
     "description": "SPOD Magento 2 Sync",
+    "version": "1.1.1",
     "type": "magento2-module",
     "license": "proprietary",
     "authors": [
