Adds guzzlehttp as a http client. Few fixes regarding connection to SPOD status page and products sync.

--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,17 @@
         {
             "name": "Jan Brinkmann",
             "email": "jan@jbcommerce.de"
+        },
+        {
+            "name": "Trilix GmbH",
+            "email": "info@trilix-gmbh.de"
         }
     ],
-    "minimum-stability": "dev",
-    "require": {},
+    "minimum-stability": "stable",
+    "require": {
+        "psr/http-message": "~1.0",
+        "guzzlehttp/guzzle": "~6.0"
+    },
     "autoload": {
         "files": [
             "registration.php"
