--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,19 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "psr/http-message": "~1.0",
-        "guzzlehttp/guzzle": "~6.0"
+        "php": "~7.4.0||~8.1.0",
+        "psr/http-message": "^1.0",
+        "guzzlehttp/guzzle": "^7.0",
+        "magento/framework": "103.0.*",
+        "magento/module-store": "101.1.*",
+        "magento/module-backend": "102.0.*",
+        "magento/module-directory": "100.4.*",
+        "magento/module-eav": "102.1.*",
+        "magento/module-catalog": "104.0.*",
+        "magento/module-configurable-product": "100.4.*",
+        "magento/module-customer": "103.0.*",
+        "magento/module-sales": "103.0.*",
+        "magento/module-shipping": "100.4.*"
     },
     "autoload": {
         "files": [
@@ -24,6 +35,11 @@
         ],
         "psr-4": {
             "Spod\\Sync\\": ""
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.3.x-dev"
         }
     }
 }
